Saving new entries does not work.

--- a/Journal/Journal/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboard/Base.lproj/Main.storyboard
@@ -85,6 +85,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="OqQ-1b-pnE">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="NET-3o-aII" eventType="valueChanged" id="rpg-ju-sbI"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1dy-EP-lx7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
