--- a/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -69,6 +69,7 @@
                                             <outlet property="bodyLbl" destination="1HY-il-oNX" id="XvO-Oe-MNO"/>
                                             <outlet property="timeStampLbl" destination="uxi-Uk-9BD" id="JdC-kb-5Dw"/>
                                             <outlet property="titleLbl" destination="cBt-Pq-2fg" id="Pz0-ds-QiK"/>
+                                            <segue destination="jGp-P0-RMv" kind="show" identifier="ShowDetail" id="6bR-j7-jkW"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -170,4 +171,7 @@
             <point key="canvasLocation" x="290" y="138"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="6bR-j7-jkW"/>
+    </inferredMetricsTieBreakers>
 </document>
